pictor (2.18) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Feb 2012 13:54:16 -0600

pictor (2.17-0ubuntu1) precise; urgency=low

  [ Fixed in #ubuntu-classroom session ]
  * index.php:
    - support .png images

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Feb 2012 13:54:14 -0600

pictor (2.16-0ubuntu1) precise; urgency=low

  * debian/copyright, index.php, kenburns.js:
    - add the kenburns effect for a screensaver mode

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 12 Dec 2011 21:51:34 -0600

pictor (2.15-0ubuntu1) oneiric; urgency=low

  * pictor-unload:
    - fix timestamps for vfat filesystems :-(
  * index.php:
    - standardize thumbnail height

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 30 Jul 2011 11:14:40 -0500

pictor (2.14-0ubuntu1) oneiric; urgency=low

  * pictor-unload:
    - automatically unmount if run with root perms, else prompt via sudo

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 30 Jun 2011 21:44:28 +0000

pictor (2.13-0ubuntu1) oneiric; urgency=low

  * index.php:
    - remove table borders around thumbnails
    - make the thumbnails view full screen
    - use a film icon for video clips
    - update copyright
  * index.php, settings.php:
    - eliminate THUMB_COLUMNS global
  * settings.php: up the default width do 1024

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 18:19:30 -0400

pictor (2.12-0ubuntu1) natty; urgency=low

  * debian/pictor.links, index.php: rename "assets" to "silk"; gives some
    credit to the silk project and perhaps less generic than "assets"
  * index.php: fix back/next links in table

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 01 Mar 2011 03:12:25 -0600

pictor (2.11-0ubuntu1) natty; urgency=low

  * debian/pictor.links, index.php: rename "icons" link to "assets",
    seems that apache2 module "alias" often aliases "icons" directory

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Feb 2011 09:22:35 -0800
